--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-beta.39",
     "@vuepress/plugin-back-to-top": "^2.0.0-beta.38",
-    "@vuepress/plugin-nprogress": "^2.0.0-beta.38",
+    "@vuepress/plugin-search": "^2.0.0-beta.38",
     "vuepress": "^2.0.0-beta.39"
   },
   "name": "vuepress-ddemo",
@@ -10,7 +10,6 @@
   "main": "index.js",
   "dependencies": {
     "ansi-regex": "^5.0.1",
-    "ansi-styles": "^4.3.0",
     "argparse": "^1.0.10",
     "array-union": "^2.1.0",
     "autoprefixer": "^10.4.4",
