--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@vuepress/plugin-search": "^2.0.0-beta.38",
     "vuepress": "^2.0.0-beta.39"
   },
-  "name": "vuepress-ddemo",
+  "name": "vuepress-demo",
+  "homepage": "https://sachinbro.github.io/vuepress-demo/",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
@@ -46,6 +47,7 @@
     "fraction.js": "^4.2.0",
     "fs-extra": "^10.0.1",
     "function-bind": "^1.1.1",
+    "gh-pages": "^3.2.3",
     "glob-parent": "^5.1.2",
     "globby": "^11.1.0",
     "graceful-fs": "^4.2.10",
@@ -122,6 +124,8 @@
     "wcwidth": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run docs:build",
+    "deploy": "gh-pages -d docs/.vuepress/dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
