--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "vuepress": "^2.0.0-beta.39"
   },
   "name": "vuepress-demo",
-  "homepage": "https://sachinbro.github.io/vuepress-demo/",
+  "homepage": "https://sachinbro.github.io/blogs",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
