--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,7 @@ jobs:
           node-version: [16.x]
       steps:
         - name: Checkout
-          uses: actions/checout@v1
+          uses: actions/checkout@v1
 
         - name: Install and build
           run:  npm install && npm run docs:build
