--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,14 +6,14 @@ on:
       - "main"
 jobs: 
     build:
-      runs-on: windows-latest
+      runs-on: ubuntu-latest
 
       strategy:
         matrix:
           node-version: [16.x]
       steps:
         - name: Checkout
-          uses: actions/checkout@v1
+          uses: actions/checout@v1
 
         - name: Install and build
           run:  npm install && npm run docs:build
