--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ on:
       - "main"
 jobs: 
     build:
-      runs-on: windows-latest
+      runs-on: ubuntu-latest
 
       strategy:
         matrix:
