--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-beta.39",
     "@vuepress/plugin-back-to-top": "^2.0.0-beta.38",
+    "@vuepress/plugin-medium-zoom": "^2.0.0-beta.38",
     "@vuepress/plugin-search": "^2.0.0-beta.38",
     "vuepress": "^2.0.0-beta.39"
   },
@@ -36,7 +37,6 @@
     "electron-to-chromium": "^1.4.107",
     "entities": "^2.1.0",
     "esbuild": "^0.14.36",
-    "esbuild-windows-64": "^0.14.36",
     "escalade": "^3.1.1",
     "esprima": "^4.0.1",
     "estree-walker": "^2.0.2",
