--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "vuepress": "^2.0.0-beta.39"
   },
   "name": "vuepress-demo",
-  "homepage": "https://sachinbro.github.io/blogs",
+  "homepage": "https://sachinbro.github.io/blogs/",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
