--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-beta.39",
     "@vuepress/plugin-back-to-top": "^2.0.0-beta.38",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.43",
     "@vuepress/plugin-medium-zoom": "^2.0.0-beta.38",
     "@vuepress/plugin-search": "^2.0.0-beta.38",
     "vuepress": "^2.0.0-beta.39"
